# terraform-forge-cli

./: CLAUDE.md  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
.github/workflows/: release.yml
.github/workflows.disabled/: ci.yml.disabled
src/: helpers_template.rs  main.rs
src/commands/: diff.rs  drift.rs  generate.rs  mod.rs  scaffold.rs  validate.rs
