[package]
name = "terraform-forge-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "CLI tool for generating Terraform providers from OpenAPI specs"
homepage = "https://github.com/pleme-io/terraform-forge-cli"
repository = "https://github.com/pleme-io/terraform-forge-cli"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "development-tools"]
keywords = ["terraform", "codegen", "openapi", "cli"]

[[bin]]
name = "terraform-forge"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
openapi-forge = { git = "https://github.com/pleme-io/openapi-forge" }
terraform-forge = { git = "https://github.com/pleme-io/terraform-forge" }
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
